--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "axios": "^1.1.3",
     "core-js": "^3.8.3",
+    "echarts": "^5.4.0",
     "element-ui": "^2.15.10",
     "lodash": "^4.17.21",
     "vue": "^2.6.14",
